--- a/assets/SASS/main.scss
+++ b/assets/SASS/main.scss
@@ -1,4 +1,5 @@
 @import "../stylesheets/bootstrap/_variables";
 @import "../stylesheets/_bootstrap";
 @import "style";
+@import "home1";
 //@import "variable";
