--- a/assets/SASS/_home1.scss
+++ b/assets/SASS/_home1.scss
@@ -911,7 +911,7 @@
           display: none;
         }
       }
-
+////
       .appBakerzDevelopmentSpecialist-row-two{
         display: none;
       }
