--- a/assets/SASS/_style.scss
+++ b/assets/SASS/_style.scss
@@ -530,6 +530,7 @@
 
 ////////////////// MEDIA QUERY /////////////////
 
+/////////////////////////////////
 
 //////////// md
 @media (min-width: 992px) and (max-width: 1199px) {
